# ros2_benchmarking

./: .gitignore  README  README.md  data  graphs  logs  tcpdump
comm/: CMakeLists.txt  DFMacros.cmake  README
comm/common/: CMakeLists.txt  communicationutils.cpp  communicationutils.h  logging.c  logging.cpp  logging.h  messagetypes.h  nodefactoryinterface.h  nodeinterface.h  qosprofiles.h  rosnodeinterface.h  rostopics.h  settings.h  topics.h
comm/ddsnode/: CMakeLists.txt  FindOpenSplice.cmake  MacroOpenSplice.cmake  RobotMessages.idl  ddsinclude.h  ddsnode.cpp  ddsnode.h  ddsnodefactory.cpp  ddsnodefactory.h  ddspublisher.cpp  ddspublisher.h  ddsqos.cpp  ddsqos.h  ddssubscriber.cpp  ddssubscriber.h  ddstopics.cpp  ddstopics.h
comm/ros1node/: CMakeLists.txt  ros1callbacks.cpp  ros1callbacks.h  ros1fwd.h  ros1initializer.cpp  ros1initializer.h  ros1masterchecker.cpp  ros1masterchecker.h  ros1messages.h  ros1node.cpp  ros1node.h  ros1nodefactory.h  ros1participant.cpp  ros1participant.h  ros1publisher.cpp  ros1publisher.h  ros1subscriber.cpp  ros1subscriber.h
comm/ros1node/messages/: CMakeLists.txt  RobotControl.h  RobotStatus.h  package.xml
comm/ros1node/messages/msg/: RobotControl.msg
comm/ros2node/: CMakeLists.txt  ospl.xml  ros2messages.h  ros2messagetovariant.h  ros2node.cpp  ros2node.h  ros2nodefactory.h  ros2qosprofile.cpp  ros2qosprofile.h  ros2subscriber.cpp  ros2subscriber.h  ros2subscriptionlistener.h  ros2subscriptionlistenerinterface.h  roscommunication.cpp
comm/ros2node/messages/: CMakeLists.txt  package.xml  robot_control.h  robot_control.hpp  robot_control__functions.h  robot_control__introspection_type_support.h  robot_control__struct.h  robot_control__struct.hpp  robot_control__traits.hpp  robot_control__type_support.h  robot_status.h  robot_status.hpp  robot_status__functions.h  robot_status__introspection_type_support.h  robot_status__struct.h  robot_status__struct.hpp  robot_status__traits.hpp  robot_status__type_support.h
comm/ros2node/messages/dds_opensplice/: RobotControl_.cpp  RobotControl_Dcps.h  RobotControl_Dcps_impl.h  RobotStatus_.h  RobotStatus_Dcps_impl.h  ccpp_RobotStatus_.h  robot_control__type_support.cpp  robot_control__type_support.hpp  robot_status__type_support.cpp  robot_status__type_support.hpp
comm/ros2node/messages/dds_opensplice_c/: RobotControl_.h  RobotControl_Dcps.cpp  RobotControl_Dcps_impl.cpp  RobotControl_SplDcps.cpp  RobotControl_SplDcps.h  RobotStatus_.cpp  RobotStatus_Dcps.cpp  RobotStatus_Dcps.h  RobotStatus_Dcps_impl.cpp  RobotStatus_SplDcps.cpp  RobotStatus_SplDcps.h  ccpp_RobotControl_.h  robot_control__type_support_c.cpp  robot_status__type_support_c.cpp
comm/ros2node/messages/msg/: RobotAlarm.msg  RobotControl.msg  RobotSensor.msg
comm/ros2node/msgs/: package.xml
comm/ros2node/msgs/msg/: RobotStatus.msg
comm/scenarios/: CMakeLists.txt  configparser.cpp  configparser.h  ddsrunner.cpp  nodefactory.h  nodestarter.cpp  nodestarter.h  ros1Console.cpp  ros1Console.h  ros1Robot.cpp  ros1Robot.h  ros1runner.cpp  ros2Console.cpp  ros2Console.h  ros2Robot.cpp  ros2runner.cpp  rosconsole.ini  rosrobot.ini  testrunner.cpp  testrunner.h  timersenum.h
comm/scenarios/config/: bridge-console.ini  bridge-robot.ini  perf-console.ini  perf-robot.ini  resilience-console.ini  resilience-robot.ini  scalability-console.ini  scalability-robot.ini  video-console.ini  video-robot.ini
docker/: pull_mother.sh
docker/dds/: Dockerfile
docker/dep_qt/: Dockerfile
docker/dep_qt_ros/: Dockerfile
docker/dep_qt_ros2/: Dockerfile
docker/mother_ros/: Dockerfile
docker/mother_ros2/: Dockerfile
docker/mother_rtrc/: Dockerfile
docker/nvidia_qt/: Dockerfile  run.sh
docker/nvidia_qt_ros/: Dockerfile  build.sh
docker/opensplice/: DCPS_ISO_Cpp.mpc.patch  Dockerfile
docker/opensplice_base/: Dockerfile  macros.hpp.patch
docker/opensplice_node/: Dockerfile
docker/opensplicenode/: Dockerfile
docker/qt/: Dockerfile
docker/qt_ros/: Dockerfile
docker/ros1/: Dockerfile
docker/ros1_base/: Dockerfile
docker/ros1_node/: Dockerfile
docker/ros1node/: Dockerfile
docker/ros2/: Dockerfile  publisher.c.patch  subscription.c.patch
docker/ros2_base/: Dockerfile  functions.cpp.patch  publisher.c.patch  subscription.c.patch
docker/ros2_bridge/: Dockerfile
docker/ros2_connext/: Dockerfile  functions.cpp.patch  shared_functions.cpp.patch
docker/ros2_fastrtps/: Dockerfile  RTPSDomain.cpp.patch  functions.cpp.patch
docker/ros2_opensplice/: Dockerfile  qos.cpp.patch
docker/ros2node/: Dockerfile
gnuplot/: compare-times.plt  first-received.plt  histogram.plt  latency.plt  lost-packets-established.plt  lost-packets.plt  throughput.plt
python/: Logs.py  Plotter.py  TestRunner.py  docker_list.py  dockermanipulator.py  dockertests.py  files.py  first_test.py  pybrctl.py  run.py  run_tests.py  second_test.py  third_test.py
ros2_psor_messages/: CMakeLists.txt
ros2_psor_messages/msg/: RobotControl.msg
scripts/: build_container.sh  build_image.sh  cpu_usage.sh  memory_usage.sh  networks.sh  qtcreator.sh  remove_container.sh  remove_image.sh  start_opensplice_console.sh  start_opensplice_robot.sh  start_ros1_bridge.sh  start_ros1_console.sh  start_ros1_master.sh  start_ros1_robot.sh  start_ros1_scalability_robot.sh  start_ros2_console.sh  start_ros2_robot.sh  start_ros2connext_console.sh  start_ros2connext_robot.sh  start_ros2connext_scalability_robot.sh  start_ros2fastrtps_console.sh  start_ros2fastrtps_robot.sh  start_ros2fastrtps_scalability_robot.sh  start_ros2opensplice_console.sh  start_ros2opensplice_robot.sh  start_ros2opensplice_robot_bridge.sh  start_ros2opensplice_scalability_robot.sh
tests/: console_ros.sh  console_ros2.sh  console_rtrc.sh  robot_ros.sh  robot_ros2.sh  robot_rtrc.sh
