<package>
  <name>messages</name>
  <version>1.0.0</version>
  <description>Messages for ROS2 Benchmarking</description>
  <maintainer email="rkozik@piap.pl">Rafał Kozik</maintainer>
  <license>LGPL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
