<?xml version="1.0"?>
<package format="3">
  <name>ros2eval_msgs</name>
  <version>1.5.3</version>
  <description>Simple messages for testing</description>
  <maintainer email="adabrowski@piap.pl">Adam Dabrowski</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
